# django-pydantic-settings

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  .test.env  LICENSE  Pipfile  README.md  pydantic_settings.py  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: tox.yml
pydantic_settings/: __init__.py  cache.py  database.py  default.py  models.py  sentry.py  settings.py  types.py
settings_test/: .env  .flake8  Pipfile  manage.py  pydantic_settings.py  test_cache.py
settings_test/settings_test/: asgi.py  database_settings.py  manage.py  settings.py  urls.py  wsgi.py
settings_test/settings_test/settings_test/: urls.py  wsgi.py
settings_test/settings_test/settings_test/settings/: __init__.py  base.py  local.py
settings_test/tests/: test_env.py
tests/: test_cache.py  test_env.py
tests/settings_confdir_proj/conf/: __init__.py
tests/settings_proj/: asgi.py  conf.py  wsgi.py
