[tool.poetry]
name = "django-pydantic-settings"
version = "0.4.1"
description = "Manage Django settings with Pydantic."
authors = ["Josh Ourisman <me@josho.io>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/joshourisman/django-pydantic-settings"
repository = "https://github.com/joshourisman/django-pydantic-settings"
packages = [{ include = "pydantic_settings" }]

[tool.poetry.dependencies]
python = "^3.6.1"
Django = ">=1.11"
dj-database-url = "^0.5.0"
sentry-sdk = { version = "*", optional = true }
pydantic = { version = "^1.8", extras = ["email"] }
typing-extensions = { version = "^3.7.4", python = '<2.8' }

[tool.poetry.extras]
sentry = ["sentry-sdk"]

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-dotenv = "^0.5.2"
tox = "^3.23.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
