[tool.poetry]
name = "django-pydantic-settings"
version = "0.6.3"
description = "Manage Django settings with Pydantic."
authors = ["Josh Ourisman <me@josho.io>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/joshourisman/django-pydantic-settings"
repository = "https://github.com/joshourisman/django-pydantic-settings"
packages = [{ include = "pydantic_settings" }]

[tool.poetry.dependencies]
python = "^3.8"
Django = ">=1.11"
sentry-sdk = { version = "*", optional = true }
pydantic = { version = "^1.8", extras = ["email"] }
typing-extensions = { version = ">=3.7.4,<5.0.0", python = '<2.8' }

[tool.poetry.extras]
sentry = ["sentry-sdk"]

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
pytest-dotenv = "^0.5.2"
tox = "^4.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
